fix page break in pdf

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,3 +16,8 @@
 @import 'components/info-tag';
 @import 'components/references';
 @import 'components/education';
+
+.page-break {
+  margin-top: 15px;
+  page-break-before: always;
+}
